# atcc

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  atcc.sln  atcc.vcxproj  compile_commands.json  generated.c  hello.dot  please
.github/workflows/: test.yaml
atcc.xcodeproj/: project.pbxproj
atcc.xcodeproj/project.xcworkspace/xcuserdata/atipls.xcuserdatad/: UserInterfaceState.xcuserstate  WorkspaceSettings.xcsettings
atcc.xcodeproj/xcshareddata/xcschemes/: atcc.xcscheme
atcc.xcodeproj/xcuserdata/atipls.xcuserdatad/xcschemes/: xcschememanagement.plist
projects/donut/: donut.aa  donut.vcxproj
projects/kilo/: build.cnf
projects/kilo/source/: editor.aa  util.aa
runtime/: llvm.aa  preload.aa
sample/: Makefile  build.cnf  donut.aa  hello.aa  simple.aa
sample/kilo/source/: highlight.aa
sample/source/: interop.aa  interop.c  main.aa  util.aa
sample/source/os/: linux.aa  macos.aa  windows.aa
selfhost/: ast.aa  file.aa  lexer.aa  main.aa  selfhost.cnf  selfhost.vcxproj
source/: atcc.h  debug.c  dot.c  eval.c  gen.c  lexer.c  lower.c  main.c  parser.c  preload.c  sema.c  type.c
source/ati/: basic.h  config.c  config.h  string.c  string.h  table.c  table.h  tests.c  utest.c  utest.h  utils.c  utils.h
source/emit/: amd64.c  arm64.c  bcdump.c  bytecode.c  bytecode.h  llvm.c  main.c  source.c  tests.c
source/tests/: tests-ati.c  tests-bc.c
tests/: fib.aa  hello.aa  preload.aa  runner.py  simple.aa
tests/cases/: 01-main.aa  02-control.aa  02-if.aa  03-local.aa  03-string.aa  04-array.aa  04-string.aa  05-array.aa  05-enum.aa  99-threads.aa
tests/test/: __init__.py  setup.py  suite.py  test.py  utils.py
